--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-MySQL-python==1.2.3
+Django==1.3.1
+MySQL-python
 simplejson==2.5.0
+flup==1.0.3.dev-20110405
+python-memcached==1.48
 git+git://github.com/jeads/datasource
