--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 Django==1.3.1
 MySQL-python
 simplejson==2.5.0
-flup==1.0.3.dev-20110405
 python-memcached==1.48
 git+git://github.com/jeads/datasource
+
+flup==1.0.3.dev-20110405
+
+py==1.4.7
+pytest==2.2.3
+pytest-cov==1.6
