Add htmlcov stanza to sample nginx config.

--- a/datazilla/webapp/conf/etc/nginx/conf.d/datazilla.conf
+++ b/datazilla/webapp/conf/etc/nginx/conf.d/datazilla.conf
@@ -10,6 +10,10 @@ server {
         alias /usr/local/datazilla/datazilla/webapp/media/;
     }
 
+    location ^~ /htmlcov {
+        index index.html;
+        alias /usr/local/datazilla/htmlcov;
+
     location / {
         client_max_body_size 1G;
         include /etc/nginx/fastcgi_params;
