Add wsgi module and sample Apache config.

--- a/datazilla/webapp/sample_configs/nginx/datazilla.conf
+++ b/datazilla/webapp/sample_configs/nginx/datazilla.conf
@@ -1,9 +1,10 @@
-# This sample config assumes a WSGI app server is listening at localhost:8080,
-# and that datazilla is checked out to /usr/local/datazilla.
+# This sample nginx config assumes a WSGI app server is listening at
+# localhost:8080, datazilla is checked out to /usr/local/datazilla, and the
+# server name is datazilla.mozilla.com
 
 server {
-    listen 10.8.73.33:80;
-    server_name dz.hexxie.com;
+    listen 80;
+    server_name datazilla.mozilla.com;
     access_log /var/log/nginx/datazilla.access.log;
     error_log  /var/log/nginx/datazilla.error.log;
 
