--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,4 @@
-# requirements specific to the docs, used by readthedocs.org
+# requirements specific to the documentation, used by readthedocs.org
 Sphinx==1.1.3
 sphinxcontrib-httpdomain==1.1.7
+
